Fixed Div Issue on Safari
Fixed Div Issue on Safari: added top: 45%;

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ span {
 	position: absolute;
 	padding-left: 3px;
 	left: 0;
+	top: 45%;
 }
 
 .splash {
